bugfix on icon transation and dcard overflow

--- a/src/css/components/_dcard.scss
+++ b/src/css/components/_dcard.scss
@@ -13,6 +13,7 @@
 	max-height:100px;
 	border:1px solid transparent;
 	position:relative;
+	overflow:hidden;
 
 	@include flexbox();
 	@include align-items(center);
